<?php
namespace App\Models;

use Illuminate\Database\Eloquent\Model;
//Generated By PlantUML Command
class Elector extends Model{
    protected $table='electores';
    public function voto(){
        $this->belongsTo('App\Models\Voto');
    }
    public function cabina(){
        $this->belongsTo('App\Models\Cabina');
    }
    public function candidato(){
        $this->belongsTo('App\Models\Candidato');
    }
}
